update all apis to remove use of GITHUB token

--- a/templates/field.html
+++ b/templates/field.html
@@ -1,6 +1,6 @@
 <html>
    <body>
-   <h2>{{ data['skos:prefLabel'] }}</h2>
+   <h2>{{ data.prefLabel }}</h2>
    <p><strong>{{ data.question }}</strong></p>
    <ul>
        {% for item in data.responseOptions['choices'] %}
