fix activity html rendering to work locally and production

--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,9 +1,11 @@
 <html>
    <body>
-   <h2>{{ data.prefLabel }}</h2>
-   <p><strong>{{ data.preamble }}</strong></p>
-   {% for item in data.order %}
-        <p>{{ item }}</p>
-   {% endfor %}
+       <h2>{{ data.prefLabel }}</h2>
+       <p><strong>{{ data.preamble }}</strong></p>
+       <ol>
+           {% for item in data.order %}
+               <li><p>{{ item }}</p></li>
+           {% endfor %}
+       </ol>
    </body>
 </html>
