Revert "refactor protocol column 1 to render ui"
This reverts commit 9d6e047e2698042c5ba3a3ce26533500f8bcb6e5.

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
                 <tbody>
                     {% for item in data.protocols %}
                         <tr>
-                            <td><a href="{{ item.ui }}">{{ item.name }}
+                            <td><a href="{{ item.html_path }}">{{ item.name }}
                             </a>
                             </td>
                             <td><a href="{{ item.jsonld_path }}" title="JSON-LD Data"><img
